--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <title>Tutorial of Develop</title>
 </head>
 <body>
-    <h1>User情報管理システム</h1>
+    <h1>日報管理システム</h1>
     <h2>ログイン</h2>
     <p class="err" th:if="${param.error}">ユーザ名かパスワードが一致しませんでした。</p>
     <form method="post" action="/login" th:action="@{/login}">
