--- a/src/main/resources/templates/report/list.html
+++ b/src/main/resources/templates/report/list.html
@@ -3,17 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>Tutorial of Develop</title>
+    <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/report/list.css}">
 </head>
 <body>
-    <h1>report情報管理システム</h1>
+    <header>
+        <div>
+            <h2><a th:href="@{/}">日報管理システム</a></h2>
+            <span><a th:href="@{/employee/list}">従業員管理</a></span>
+            <span><a th:href="@{/report/list}">日報管理</a></span>
+        </div>
+        <nav>
+            <ul>
+                <li><span th:text="${#authentication.principal.employee.name}"></span></li>
+                <li><a th:href="@{/logout}">ログアウト</a></li>
+            </ul>
+        </nav>
+    </header>
     <h2>日報一覧(全件)</h2>
-    <!-- 追加ここから -->
-    <form method="post" th:action="@{/logout}">
-        <input type="submit" value="ログアウト">
-    </form><br>
-    <!-- 追加ここまで -->
-    <a th:href="@{/report/regist}">reportの登録</a>
+    <a th:href="@{/report/regist}">日報の登録</a>
     <table>
         <tr>
             <th>氏名</th>
