--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="utf-8">
     <title>Tutorial of Develop</title>
+    <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/employee/list.css}">
 </head>
 <body>
-    <h1>employee情報管理システム</h1>
-    <h2>employee一覧(全件)</h2>
-    <!-- 追加ここから -->
-    <form method="post" th:action="@{/logout}">
-        <input type="submit" value="ログアウト">
-    </form><br>
-    <!-- 追加ここまで -->
-    <a th:href="@{/employee/regist}">employeeの登録</a>
+    <header>
+        <div>
+            <h2><a th:href="@{/}">日報管理システム</a></h2>
+            <span><a th:href="@{/employee/list}">従業員管理</a></span>
+            <span><a th:href="@{/report/list}">日報管理</a></span>
+        </div>
+        <nav>
+            <ul>
+                <li><span th:text="${#authentication.principal.employee.name}"></span></li>
+                <li><a th:href="@{/logout}">ログアウト</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h2>従業員一覧(全件)</h2>
+    <a th:href="@{/employee/regist}">従業員の登録</a>
     <table>
         <tr>
-            <th>ID</th>
+            <th>社員番号</th>
             <th>名前</th>
             <th></th>
         </tr>
         <tr th:each="employee : ${employeelist}">
-            <td th:text="${employee.id}"></td>
+            <td th:text="${employee.authentication.code}"></td>
             <td th:text="${employee.name}"></td>
             <td><a th:href="@{/employee/detail/{id}/(id=${employee.id})}">詳細表示</a></td>
         </tr>
