--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Tutorial of Develop</title>
     <link rel="stylesheet" th:href="@{/css/header.css}">
-    <link rel="stylesheet" th:href="@{/css/report/list.css}">
+    <link rel="stylesheet" th:href="@{/css/list.css}">
 </head>
 <body>
     <header>
         <div>
-            <h2><a th:href="@{/}">日報管理システム</a></h2>
+            <h1><a th:href="@{/}">日報管理システム</a></h1>
             <span><a th:href="@{/employee/list}">従業員管理</a></span>
             <span><a th:href="@{/report/list}">日報管理</a></span>
         </div>
