--- a/src/main/resources/templates/report/regist.html
+++ b/src/main/resources/templates/report/regist.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Tutorial of Develop</title>
     <link rel="stylesheet" th:href="@{/css/header.css}">
-    <link rel="stylesheet" th:href="@{/css/report/register.css}">
+    <link rel="stylesheet" th:href="@{/css/register.css}">
 </head>
 <body>
     <header>
