--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><span th:text="${#authentication.principal.employee.name}"></span></li>
-                <li><a th:href="@{/logout}">ログアウト</a></li>
+                <li><form method="post" th:action="@{/logout}"><input type="submit" value="ログアウト"></form></li>
             </ul>
         </nav>
     </header>
