--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <div>
-            <h2><a th:href="@{/}">日報管理システム</a></h2>
+            <h1><a th:href="@{/}">日報管理システム</a></h1>
             <span><a th:href="@{/employee/list}">従業員管理</a></span>
             <span><a th:href="@{/report/list}">日報管理</a></span>
         </div>
         <nav>
             <ul>
                 <li><span th:text="${#authentication.principal.employee.name}"></span></li>
-                <li><a th:href="@{/logout}">ログアウト</a></li>
+                <li><form method="post" th:action="@{/logout}"><input type="submit" value="ログアウト"></form></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,7 @@
             <td><a th:href="@{/employee/detail/{id}/(id=${employee.id})}">詳細表示</a></td>
         </tr>
     </table>
+    <p>(全<span th:text="${size}"></span>件)</p>
     <!-- 変更ここまで -->
 </body>
 </html>
