--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,11 +16,12 @@
         <nav>
             <ul>
                 <li><span th:text="${#authentication.principal.employee.name}"></span></li>
-                <li><a th:href="@{/logout}">ログアウト</a></li>
+                <li><form method="post" th:action="@{/logout}"><input type="submit" value="ログアウト"></form></li>
             </ul>
         </nav>
     </header>
-    <h2>自分日報一覧(全件)</h2>
+    <h2>自分の日報一覧(全件)</h2>
+    <a th:href="@{/report/regist}">日報登録</a>
     <table>
         <tr>
             <th>氏名</th>
@@ -35,7 +36,7 @@
             <td><a th:href="@{/report/detail/{id}/(id=${report.id})}">詳細表示</a></td>
         </tr>
     </table>
-    <a th:href="@{/report/regist}">日報登録</a>
+    <p>(全<span th:text="${size}"></span>件)</p>
     <!-- 変更ここまで -->
 </body>
 </html>
